RESOLVED FIXED199303
REGRESSION(r244633): e-mail with "height: 100%" causes unstable layout.
https://bugs.webkit.org/show_bug.cgi?id=199303
Summary REGRESSION(r244633): e-mail with "height: 100%" causes unstable layout.
alan
Reported 2019-06-27 18:51:40 PDT
Attachments
Patch (4.35 KB, patch)
2019-06-27 19:23 PDT, alan
no flags
alan
Comment 1 2019-06-27 19:23:38 PDT
WebKit Commit Bot
Comment 2 2019-06-27 20:22:35 PDT
Comment on attachment 373076 [details] Patch Clearing flags on attachment: 373076 Committed r246920: <https://trac.webkit.org/changeset/246920>
WebKit Commit Bot
Comment 3 2019-06-27 20:22:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.