REGRESSION(r244633): e-mail with "height: 100%" causes unstable layout. https://bugs.webkit.org/show_bug.cgi?id=199303 <rdar://problem/51340927>

Reviewed by Tim Horton.

Source/WebCore:

This patch restores the previous behavior (pre r244633) where we intentionally reported stale content size value to
avoid unstable layout for content like height: 100px.

* page/FrameView.cpp:
(WebCore::FrameView::autoSizeIfEnabled):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:
(TEST):


Canonical link: https://commits.webkit.org/213253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246920 268f45cc-cd09-0410-ab3c-d52691b4dbfc